--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ importlib-metadata>=3.6.0; python_version < "3.10"
 blinker>=1.6.2
 psycopg2-binary
 python-dotenv==1.0.0
-
+prometheus_client>=0.17.1
 
