--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,6 +50,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: . # build in this path
+        file: Dockerfile
         push: true # Push to registry after building
         tags: ${{ steps.meta.outputs.tags }} 
         labels: ${{ steps.meta.outputs.labels }}
