--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,8 +49,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: . # build in this path
-        file: Dockerfile
+        file: ./Dockerfile
         push: true # Push to registry after building
         tags: ${{ steps.meta.outputs.tags }} 
         labels: ${{ steps.meta.outputs.labels }}
