--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 name: Build and Push Docker Image
 
 # Trigger the workflow on push
@@ -7,7 +6,7 @@ on:
     branches: "main"
   # Optionally trigger on pull requests
   pull_request:
-    branches: [ "main", "master" ]
+    branches: "main"
 
 # Environment variables
 env:
