--- a/values.yaml
+++ b/values.yaml
@@ -9,7 +9,7 @@ replicaCount: 1
 image:
   repository: mayezra/my_flask_api
   # This sets the pull policy for images.
-  tag: "v1.0.7"
+  tag: "main"
   pullPolicy: Always
 imagePullSecrets:
   - name: regcred 
@@ -17,12 +17,18 @@ imagePullSecrets:
 
 postgresdb:
   auth:
+    existingSecret: flask-app-postgresql
+    username: postgres # Tells PostgreSQL to match your secret
     database: students
+    secretKeys:
+      adminPasswordKey: postgres-password
   persistence:
     enabled: true
     storageClass: "standard"
     size: 8Gi
-
+  image:
+    pullSecrets:
+      - name: regcred
 redisdb:
   auth:
     enabled: false 
@@ -39,14 +45,7 @@ env:
     CACHE_REDIS_HOST: "flask-app-redis-master"
     CACHE_REDIS_PORT: "6379"
     CACHE_REDIS_DB: "0"
-  #CACHE_REDIS_HOST: "flask-app-redis-master"
-  #CACHE_REDIS_PORT: "6379"
-  #CACHE_REDIS_DB: "0"
-  #CACHE_REDIS_PASSWORD: "hlFXA8PCyk"
 
-  #POSTGRES_HOST: "flask-app-postgresql"
-  #POSTGRES_DB: "students"
-  #POSTGRES_PORT: "5432"
   secret:
     POSTGRES_PASSWORD:
       name: flask-app-postgresql
